// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should merge existing translations with the extracted messages. 1`] = `
Object {
  "en": Object {
    "message1": "content 1",
    "message2": "updated 2",
    "message3": "updated 3",
    "message4": "content 4",
    "message5": "content 5",
  },
  "es": Object {
    "message1": "content 1",
    "message2": "content 2",
    "message3": "content 3",
    "message4": "content 4",
    "message5": "content 5",
  },
}
`;

exports[`Should not extract messages from the files specified in the --ignore option. 1`] = `
Object {
  "en": Object {
    "message4": "content 4",
    "message5": "",
  },
  "es": Object {
    "message4": "content 4",
    "message5": "",
  },
}
`;

exports[`Should output the translation files in a directory when using the --out-dir option. 1`] = `
Object {
  "message1": "content 1",
  "message2": "",
  "message3": "content 3",
  "message4": "content 4",
  "message5": "",
}
`;

exports[`Should output the translation files in a directory when using the --out-dir option. 2`] = `
Object {
  "message1": "content 1",
  "message2": "",
  "message3": "content 3",
  "message4": "content 4",
  "message5": "",
}
`;

exports[`Should output the translation files in a single file when using the --out-file option. 1`] = `
Object {
  "en": Object {
    "message1": "content 1",
    "message2": "",
    "message3": "content 3",
    "message4": "content 4",
    "message5": "",
  },
  "es": Object {
    "message1": "content 1",
    "message2": "",
    "message3": "content 3",
    "message4": "content 4",
    "message5": "",
  },
}
`;

exports[`Should pass extraction options to babel-plugin-react-intl. 1`] = `
Object {
  "en": Object {
    "message1": "",
    "message2": "message 2",
    "message3": "",
  },
  "es": Object {
    "message1": "",
    "message2": "message 2",
    "message3": "",
  },
}
`;

exports[`Should print information about the changes to console. 1`] = `
" Duplicate ids found: 
  ID: message3
    at a.js:7:12
    at b.js:5:12

 Added 5 IDs: 
  message1
  message2
  message3
  message4
  message5

 Removed 2 IDs: 
  message6
  message7

 Added 1 languages: 
  es

 Removed 2 languages: 
  de
  fr

"
`;
